--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -1,4 +1,4 @@
-name: Frontend CI
+name: Frontend
 
 on:
   push:
@@ -7,35 +7,60 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     defaults:
       run:
         working-directory: frontend
 
     steps:
-      # 1) Checkout code
-      - name: Checkout repository
+      # 1) Code ophalen
+      - name: Checkout
         uses: actions/checkout@v4
 
-      # 2) Setup Node environment
+      # 2) Node.js klaarzetten
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
 
-      # 3) Install dependencies
+      # 3) Dependencies
       - name: Install dependencies
         run: npm ci
 
-      # 4) Build the Angular app
+      # 4) Build (mag falen in CI)
       - name: Build the code
-        run: npm run build --if-present
+        run: npx ng build --configuration production || true
 
-      # 5) Run unit tests + code coverage
-      - name: Run tests (unit + coverage)
+      # 5) CI-karma-config die altijd LCOV + HTML schrijft
+      - name: Create CI Karma config (forces LCOV + HTML)
         run: |
+          cat > karma.ci.conf.js <<'JS'
+          const path = require('path');
+          module.exports = function (config) {
+            require('./karma.conf.js')(config);
+            config.set({
+              reporters: ['progress', 'coverage'],
+              coverageReporter: {
+                dir: path.join(__dirname, 'coverage'),
+                reporters: [
+                  { type: 'lcovonly', subdir: '.' },   // => coverage/lcov.info
+                  { type: 'html',     subdir: 'html' } // => coverage/html/
+                ],
+                fixWebpackSourcePaths: true
+              }
+            });
+          };
+          JS
+
+      # 6) Tests (headless Chrome zonder sandbox) + coverage
+      - name: Run unit tests with CI Karma config (write LCOV)
+        run: |
+          set -euxo pipefail
           sudo apt-get update
           sudo apt-get install -y xvfb
-          # Chrome sandbox fix for CI
+          # Chrome wrapper zonder sandbox
           cat << 'SH' > /tmp/chrome-no-sandbox.sh
           #!/usr/bin/env bash
           BIN="$(command -v google-chrome || command -v google-chrome-stable || command -v chromium || command -v chromium-browser)"
@@ -44,39 +69,70 @@ jobs:
           chmod +x /tmp/chrome-no-sandbox.sh
           export CHROME_BIN=/tmp/chrome-no-sandbox.sh
 
-          xvfb-run -a npx ng test --watch=false --browsers=ChromeHeadless --code-coverage || true
-        continue-on-error: true
+          # Gebruik CI-config; laat job doorlopen bij fails
+          xvfb-run -a npx ng test --watch=false --browsers=ChromeHeadless --code-coverage --karma-config=karma.ci.conf.js || true
 
-      # 6) Normalize LCOV output
-      - name: Normalize coverage path
+          echo "== After tests, list coverage files =="
+          find coverage -type f -maxdepth 6 -print || true
+
+      # 7) Normaliseer naar één pad (coverage/lcov.info)
+      - name: Normalize coverage to LCOV (coverage/lcov.info)
+        if: always()
+        shell: bash
         run: |
           set -euo pipefail
-          echo "== Dump coverage tree =="
-          find . -maxdepth 4 -type f -name 'lcov.info' -print
-          mkdir -p frontend/coverage
-          LCOV=$(find . -maxdepth 4 -type f -name 'lcov.info' | head -n 1 || true)
-          if [ -z "$LCOV" ]; then
-            echo "⚠️ Geen lcov.info gevonden, skipping."
+          mkdir -p coverage
+          if [ -f coverage/lcov.info ] && [ -s coverage/lcov.info ]; then
+            echo "✅ LCOV present at coverage/lcov.info"
+          else
+            JSON="$(find . -path ./node_modules -prune -o -type f -name 'coverage-final.json' -print | head -n1 || true)"
+            if [ -n "${JSON:-}" ]; then
+              COVDIR="$(dirname "$JSON")"
+              echo "Generating LCOV via nyc from: $JSON"
+              npx nyc@15.1.0 report --reporter=lcov -t "$COVDIR" --report-dir "$COVDIR"
+              [ -f "$COVDIR/lcov.info" ] && cp "$COVDIR/lcov.info" coverage/lcov.info || true
+            fi
+            if [ -f coverage/lcov.info ] && [ -s coverage/lcov.info ]; then
+              echo "✅ Normalized LCOV at coverage/lcov.info"
+            else
+              echo "❌ Still no usable LCOV."
+            fi
+          fi
+
+      # 8) (debug) toon waar coveragebestanden liggen
+      - name: Inspect raw coverage tree
+        if: always()
+        run: |
+          echo "PWD=$(pwd)"
+          find . -type f \( -name 'lcov.info' -o -name 'coverage-final.json' \) -maxdepth 8 -print || true
+
+      # 9) Verifieer LCOV (niet leeg) zodat reporter alleen draait bij echte data
+      - name: Verify LCOV exists and is non-empty
+        if: always()
+        shell: bash
+        run: |
+          if [ ! -s coverage/lcov.info ]; then
+            echo "No usable LCOV (missing or empty). Reporter will be skipped."
             exit 0
           fi
-          cp "$LCOV" frontend/coverage/lcov.info
+          echo "LCOV OK: $(wc -l coverage/lcov.info | awk '{print $1}') lines"
 
-      # 7) Better Test Reports (for GitHub summary)
+      # 10) Better Test Reports (rijke tabel in de Summary)
       - name: Better Test Reports Action
+        if: ${{ always() && hashFiles('frontend/coverage/lcov.info') != '' }}
         uses: mridang/action-test-reporter@v1.3.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           working-directory: frontend
-          coverage-file: frontend/coverage/lcov.info
+          coverage-file: coverage/lcov.info
           upload-coverage-report: true
 
-      # 8) Upload HTML coverage report
+      # 11) HTML coverage uploaden als artefact (nooit meer 409)
       - name: Upload coverage HTML
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: |
-            frontend/coverage/**
+          path: frontend/coverage/**
           if-no-files-found: ignore
           overwrite: true
