--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -31,8 +31,8 @@ jobs:
       - name: login docker
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: build and push docker image
         uses: docker/build-push-action@v6
         with:
@@ -61,8 +61,8 @@ jobs:
       - name: login docker
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: build and push docker image
         uses: docker/build-push-action@v6
         with:
